force-app/main/default/objects/Contact/fields/BillToCompany__c.field-meta.xml
<CustomField>
    <fullName>BillToCompany__c</fullName>
    <description>This is Temporary field</description>
    <label>Bill to Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>