force-app/main/default/objects/Contact/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <description>Temporary</description>
    <label>Bill To Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>