force-app/main/default/objects/Contact/fields/LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadStatus__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Bad Contact Information</fullName>
            </value>
            <value>
                <fullName>Hot Lead</fullName>
            </value>
            <value>
                <fullName>Names &amp; Cells</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>No Use</fullName>
            </value>
            <value>
                <fullName>Missed Appt</fullName>
            </value>
            <value>
                <fullName>Sale process completed</fullName>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>