force-app/main/default/objects/Contact/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <description>This is a temporary field</description>
    <label>Sales Rep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>