force-app/main/default/objects/Contact/fields/Shipping2Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping2Address__c</fullName>
    <formula>if(LEN( Shipping2Street__c ) &gt; 0, Shipping2Street__c &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN( Shipping2City__c ) &gt; 0, Shipping2City__c &amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN( Shipping2StateProvince__c ) &gt; 0, Shipping2StateProvince__c &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN( Shipping2ZipPostalCode__c ) &gt; 0, Shipping2ZipPostalCode__c ,&quot;&quot;) &amp; BR() &amp;
If(LEN( Shipping2Country__c ) &gt; 0, Shipping2Country__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping 2 Address</label>
    <type>Text</type>
</CustomField>