force-app/main/default/objects/Contact/fields/Shipping2City__c.field-meta.xml
<CustomField>
    <fullName>Shipping2City__c</fullName>
    <label>Shipping 2 City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>