force-app/main/default/objects/Contact/fields/Shipping2Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping2Country__c</fullName>
    <label>Shipping 2 Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>