force-app/main/default/objects/Contact/fields/Shipping2ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping2ZipPostalCode__c</fullName>
    <label>Shipping 2 Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>