force-app/main/default/objects/Contact/fields/ShipToCompany__c.field-meta.xml
<CustomField>
    <fullName>ShipToCompany__c</fullName>
    <label>Ship to Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>