force-app/main/default/objects/Contact/fields/ShipToContact__c.field-meta.xml
<CustomField>
    <fullName>ShipToContact__c</fullName>
    <description>This is Temporary Filed</description>
    <label>Ship to Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>