force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>IS_EMAIL_ADDRESS_BOUNCED</columns>
    <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
    <columns>FederalDoNotCall__c</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>